--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -3,5 +3,9 @@
 // The variables you want to modify
 // $font-size-root: 20px;
 
-$text-field-border-radius: 0;
-$menu-content-border-radius: 0;
+// $text-field-border-radius: 0;
+
+$border-radius-root: 6px !default;
+$btn-letter-spacing: .0292857143em !default;
+$tabs-item-letter-spacing: .0292857143em !default;
+$btn-text-transform: none;
