style(setup): update

--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -4,7 +4,7 @@
 // $font-size-root: 20px;
 
 // $border-radius-root: 6px !default;
-$text-field-border-radius: 0;
+// $text-field-border-radius: 0;
 $btn-letter-spacing: .0092857143em !default;
 $tabs-item-letter-spacing: .0092857143em !default;
 $btn-text-transform: none;
