--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -1,10 +1,6 @@
-// Ref: https://github.com/nuxt-community/vuetify-module#customvariables
-//
-// The variables you want to modify
-// $font-size-root: 20px;
-
 // $border-radius-root: 6px !default;
 // $text-field-border-radius: 0;
+$card-border-radius: 8px;
 $btn-letter-spacing: .0092857143em !default;
 $tabs-item-letter-spacing: .0092857143em !default;
 $btn-text-transform: none;
