--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -1,6 +1,7 @@
 // $border-radius-root: 6px !default;
 // $text-field-border-radius: 0;
-$card-border-radius: 8px;
+$card-border-radius: 10px;
+$alert-border-radius: 10px;
 $btn-letter-spacing: .0092857143em !default;
 $tabs-item-letter-spacing: .0092857143em !default;
 $btn-text-transform: none;
